# interfaz-rag-proyecto

./: .env.template  .gitignore  README.md  docker-compose.yml  firebase_env.txt  main.py  process.py  pyproject.toml  server.py
agent_models/: google_model_shortMemory.py  loading.py  model_config.py
chat_models/: api_model.py  langchain_googleAI_mode.py  langchain_ollama_model.py
chunks/: chunks_para_vectorizar-valle_lili_info.json  chunks_valle_de_lili.json  chunks_valle_de_lili_.json
config/: firestore_config.py
frontend/: chatbot.py  presentation_proyect.py
frontend/styled_components/: css_orb.py
helpers/: effects.py  uuid.py
models/: api_model.py  langchain_azure_openAI_model.py  langchain_ollama_model.py  local_model.py
scripts/: populate_lab_results.py
settings/: database_connection.py  envs.py
system_prompts/: master_prompt.py
tools/: structured.py  tools.py
tools/data/: contacto.json  pending_appointments.json  vacunacion.json
tools/formatters/: lab_results_formatters.py
vectorDB/: constants.py  database.py  save_data.py  save_data_gemini_embedding.py.md
vectorDB/data/: chroma.sqlite3
