[project]
name = "example-ollama-python"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "bs4>=0.0.2",
    "chromadb>=1.1.1",
    "fastapi>=0.121.2",
    "firebase-admin>=7.1.0",
    "langchain-chroma>=0.1.2",
    "langchain-community>=0.4.1",
    "langchain-ollama>=1.0.0",
    "langchain-text-splitters>=1.0.0",
    "langchain[google-genai]>=1.0.2",
    "langgraph-checkpoint-postgres>=3.0.0",
    "langserve>=0.3.3",
    "psycopg-binary>=3.2.12",
    "psycopg2-binary>=2.9.11",
    "python-dotenv>=1.1.1",
    "sse-starlette>=3.0.3",
    "uuid>=1.30",
    "uvicorn>=0.38.0",
]
